Adds systemd socket activation support. Refactor to load libsystemd earlier.

--- a/programs/ziti-edge-tunnel/CMakeLists.txt
+++ b/programs/ziti-edge-tunnel/CMakeLists.txt
@@ -5,6 +5,7 @@ if(CMAKE_SYSTEM_NAME STREQUAL Darwin)
 endif()
 if(CMAKE_SYSTEM_NAME STREQUAL Linux)
     set(NETIF_DRIVER_SOURCE netif_driver/linux/tun.c netif_driver/linux/resolvers.c netif_driver/linux/utils.c)
+    set(ZITI_INSTANCE_OS linux/libsystemd.c)
 endif()
 
 if(CMAKE_SYSTEM_NAME STREQUAL Windows)
