--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,12 +1,9 @@
 name: CI build
 
 on:
-  push:
-    branches: [ '**' ]
-
   pull_request:
     branches: [ main ]
-
+  workflow_dispatch:
   workflow_call:
 
 # cancel older, redundant runs of same workflow on same branch
