finish renaming script as ziti-builder.sh

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Run CMake for Linux
         if: ${{ matrix.container != null }}
         run: |
-          ./cmake.sh \
+          ./ziti-builder.sh \
             -p "ci-${{ matrix.preset }}" \
             -t bundle
 
